Initial work taken out from Ferrite-branch

--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "b200c708-61b9-46d9-917a-515144ac7aac"
 authors = ["Knut Andreas Meyer and contributors"]
 version = "0.1.0"
 
+[deps]
+Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
+Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
+
 [compat]
+Ferrite = "1.0.0"
+Tensors = "1.16.1"
 julia = "1.10"
 
 [extras]
