--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,6 +44,8 @@ jobs:
       - uses: codecov/codecov-action@v5
         with:
           files: lcov.info
+          plugins: noop
+          disable_search: true
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
   docs:
